--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask
-Flask-SocketIO
-eventlet
-gunicorn
-Flask-Session
+Flask==2.3.3
+Flask-SocketIO==5.3.6
+eventlet==0.33.3
+gunicorn==21.2.0
+Flask-Session==0.5.0
+python-dotenv==1.0.1
