--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==2.3.3
 Flask-SocketIO==5.3.6
+python-socketio==5.9.0
+python-engineio==4.7.1
+Werkzeug==2.3.7
 eventlet==0.33.3
 gunicorn==21.2.0
-Flask-Session==0.5.0
-python-dotenv==1.0.1
